--- a/INCEPTION/package.json
+++ b/INCEPTION/package.json
@@ -2,7 +2,6 @@
   "name": "namastereact",
   "version": "1.0.0",
   "description": "this is namaste react by akshay saini",
-  "main": "script.js",
   "scripts": {
     "test": "jest"
   },
@@ -30,5 +29,11 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
-  }
+  },
+  "browserList":[
+    "last 2 Chrome versions",
+    "last 2 Firefox versions",
+    "last 2 Safari versions",
+    "last 2 Edge versions"
+  ]
 }
