--- a/project1/package.json
+++ b/project1/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+  "test": "jest",
+  "start":" npx parcel index.html",
+  "build": "npx parcel build index.html"
+},
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -7,3 +12,4 @@
     "process": "^0.11.10"
   }
 }
+ 
